# CPP-exam

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
